Modernize collection usage