@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2023 the original author or authors.
+ *    Copyright 2009-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package org.apache.ibatis.scripting.xmltags;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.ibatis.session.Configuration;
@@ -25,7 +24,7 @@ import org.apache.ibatis.session.Configuration;
  */
 public class SetSqlNode extends TrimSqlNode {
 
-  private static final List<String> COMMA = Collections.singletonList(",");
+  private static final List<String> COMMA = List.of(",");
 
   public SetSqlNode(Configuration configuration, SqlNode contents) {
     super(configuration, contents, "SET", COMMA, null, COMMA);
