@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2025 the original author or authors.
+ *    Copyright 2009-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.apache.ibatis.scripting.xmltags;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.StringTokenizer;
@@ -69,7 +68,7 @@ public class TrimSqlNode implements SqlNode {
       }
       return list;
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
   private class FilteredDynamicContext extends DynamicContext {
